1998-10-23  Martin Baulig  <martin@home-of-linux.org>

	* shell/main.c: Add callback to close the window when the shell exits.

	* launcher/launcher-server.c: Don't use installed header files.

1998-10-22  Martin Baulig  <martin@home-of-linux.org>

	* launcher: New plugin. This is a `Document Launcher' which is
	implemented as a CORBA server.
	
	* idl, goad: New directories for plugins that use CORBA.

1998-10-22  Martin Baulig  <martin@home-of-linux.org>

	* shell: New plugin. This is a gmodule plugin which uses libzvt
	from gnome-libs/zvt.

1998-10-14  Alex Roberts  <bse@dial.pipex.com>

	* gmodule_plugin_howto: Fixed typo, it's "gEdit" NOT "GEdit"!!

1998-10-14  Martin Baulig  <martin@home-of-linux.org>

	* gmodule_plugin_howto: New file. Contains documentation about
	the new GModule Plugin Interface.

1998-10-13  Martin Baulig  <martin@home-of-linux.org>

	* client/client.c: Added the following functions:
	`client_document_set_auto_indent', `client_document_set_status_bar',
	`client_document_set_word_wrap', `client_document_set_read_only',
	`client_document_set_split_screen', `client_document_set_scroll_ball'.
	
1998-10-13  Martin Baulig  <martin@home-of-linux.org>

	* client/Makefile.am (geditincludedir): New variable pointing to
	`$(includedir)/gedit'. We need to install the header files to make
	it possible to write plugins outside the gedit module.
	(geditinclude_HEADERS): Added `client.h' here.

1998-10-06  Chris Lahey  <clahey@umich.edu>

	* client/client.h, client/client.c: Added text_insert
	functionality.

1998-10-05  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* hello/.cvsignore: Shut up cvs.

1998-09-23  Chris Lahey  <clahey@umich.edu>

	* diff/diff.c (done): Set up diff.c to send a client_finish before
	exitting if the window is shut or cancel is hit.

1998-09-23  Chris Lahey  <clahey@umich.edu>

	* plugin_howto: Just updated this a bit.

	* client/client.c (client_init): Fixed an ordering bug where