@@ -1,3 +1,7 @@
+1998-11-03  Seth Alves  <alves@hungry.com>
+
+	* spell/spell.c: poptification
+
 1998-10-23  Martin Baulig  <martin@home-of-linux.org>
 
 	* shell/main.c: Add callback to close the window when the shell exits.
